--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
@@ -20,6 +22,9 @@
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-device-info": "^10.0.2",
     "react-native-flash-message": "^0.3.1",
+    "react-native-indicators": "^0.17.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
