--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -26,6 +26,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
     "react-native-svg": "^13.0.0",
