--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -13,12 +13,13 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-google-signin/google-signin": "^8.0.0",
+    "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "axios": "^0.27.2",
-    "react": "18.0.0",
     "moment": "^2.29.4",
+    "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-date-picker": "^4.2.5",
