--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -15,6 +15,7 @@
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "axios": "^0.27.2",
@@ -30,6 +31,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.3.1",
+    "react-native-pager-view": "^6.0.0",
     "react-native-permissions": "^3.6.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -38,6 +40,7 @@
     "react-native-screens": "^3.16.0",
     "react-native-svg": "^13.0.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "7.2.3",
     "redux": "4.0.5",
