--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -28,12 +28,14 @@
     "react-native-flash-message": "^0.3.1",
     "react-native-geocoder": "^0.5.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
+    "react-native-gesture-handler": "^2.6.1",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.3.1",
     "react-native-pager-view": "^6.0.0",
     "react-native-permissions": "^3.6.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^2.10.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.3",
@@ -42,6 +44,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-week-view": "^0.23.0",
     "react-redux": "7.2.3",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
