--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@mikezzb/react-native-timetable": "^0.2.6",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-google-signin/google-signin": "^8.0.0",
