--- a/SaloonAppProvider/android/app/src/main/AndroidManifest.xml
+++ b/SaloonAppProvider/android/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
+      android:icon="@drawable/salon"
+      android:roundIcon="@drawable/salon"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
 
