--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -36,7 +36,7 @@
     "react-native-permissions": "^3.6.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-popover-view": "^5.1.4",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated": "2.2.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.3",
