--- a/SaloonAppProvider/package.json
+++ b/SaloonAppProvider/package.json
@@ -41,6 +41,7 @@
     "react-native-popover-view": "^5.1.4",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.12.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.3",
@@ -53,7 +54,8 @@
     "react-redux": "7.2.3",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
