--- a/SaloonAppProvider/ios/SaloonAppProvider/Info.plist
+++ b/SaloonAppProvider/ios/SaloonAppProvider/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>SaloonAppProvider</string>
+	<string>Nuyou Business</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
